Added missing form components

--- a/src/app/book-create/book-create.component.html
+++ b/src/app/book-create/book-create.component.html
@@ -93,7 +93,7 @@
                                 <label for="name">Destination City</label>
                             
                             
-                                <input type="text" [(ngModel)]="book.isbn" name="isbn" placeholder="enter city" required>
+                                <input type="text" class="form-control" [(ngModel)]="book.isbn" name="isbn" placeholder="enter city" required>
                           </div>      
                                 
                         <!------- Destination Activity row --------->
@@ -101,7 +101,7 @@
                         <div class="form-group">
                         <label for="name">Destination Activity</label>
                         
-                        <input type="text" [(ngModel)]="book.title" name="title" placeholder="enter what you want to do, e.g. Hiking etc." required>
+                        <input type="text" class="form-control" [(ngModel)]="book.title" name="title" placeholder="enter what you want to do, e.g. Hiking etc." required>
                         
                        </div>
                        
@@ -111,7 +111,7 @@
                         <label for="name">Destination Budget</label>
                         
                         
-                      <input type="text" [(ngModel)]="book.author" name="author" placeholder="enter dollar amount e.g. $500" required>
+                      <input type="text" class="form-control" [(ngModel)]="book.author" name="author" placeholder="enter dollar amount e.g. $500" required>
                     </div>
                         
                         <!------- Destination Image --------->
@@ -120,7 +120,7 @@
                         <label for="name">Destination Image</label>
                         
                         
-                        <input type="text" [(ngModel)]="book.publisher" name="publisher" placeholder="copy image address of city and paste here" required>
+                        <input type="text" class="form-control" [(ngModel)]="book.publisher" name="publisher" placeholder="copy image address of city and paste here" required>
                       </div>
                           
                         <!----------- Save button row ------------->
@@ -154,14 +154,14 @@
                                 <label for="name">Destination City</label>
                             
                             
-                                <input type="text" [(ngModel)]="book.isbn" name="isbn" placeholder="enter city" required>
+                                <input type="text" class="form-control" [(ngModel)]="book.isbn" name="isbn" placeholder="enter city" required>
                         
 <!------- Destination Activity row --------->
                        
                         
 <label for="name">Destination Activity</label>
                         
-<input type="text" [(ngModel)]="book.title" name="title" placeholder="enter what you want to do, e.g. Hiking etc." required>
+<input type="text" [(ngModel)]="book.title" class="form-control" name="title" placeholder="enter what you want to do, e.g. Hiking etc." required>
 
                       
 <!------- Destination Budget row --------->
@@ -170,7 +170,7 @@
 <label for="name">Destination Budget</label>
                         
                         
-<input type="text" [(ngModel)]="book.author" name="author" placeholder="enter dollar amount e.g. $500" required>
+<input type="text" [(ngModel)]="book.author" class="form-control" name="author" placeholder="enter dollar amount e.g. $500" required>
                       
 
 <!------- Destination Image --------->
@@ -179,7 +179,7 @@
 <label for="name">Destination Image</label>
                         
                         
-<input type="text" [(ngModel)]="book.publisher" name="publisher" placeholder="copy image address of city and paste here" required>
+<input type="text" [(ngModel)]="book.publisher" class="form-control" name="publisher" placeholder="copy image address of city and paste here" required>
                        
                           
                         <!----------- Save button row ------------->
