--- a/src/app/book-create/book-create.component.css
+++ b/src/app/book-create/book-create.component.css
@@ -38,7 +38,7 @@ color: #fff !important;
   box-sizing: border-box;
 }
 
-.full-destination {
+body {
   
   background-image: url("/assets/images/webform_wallpaper.png");
   background-size: cover;
