--- a/src/app/book-create/book-create.component.html
+++ b/src/app/book-create/book-create.component.html
@@ -43,7 +43,7 @@
       
   </head>
   <body>
-    
+    <section class="full-destination">
     <nav class="navbar navbar-expand-md">
         <a class="navbar-brand"><img src="/assets/images/sheero.png" alt="sheero_logo" class="sheero"></a>
         <span class="navbar-text mx-auto">TripWithUs!</span>
@@ -188,7 +188,7 @@
                                    
                                 
                         <div class="form-group">
-                          <button type="submit" class="btn btn-success" [disabled]="!bookForm.form.valid">Save</button>
+                          <button type="submit" class="btn btn-success save-button" [disabled]="!bookForm.form.valid">Save</button>
                         </div>
                     </form>
                 
@@ -196,12 +196,12 @@
                     </div>
     
             </section>
-          
+            </section>>
       <!------------------------------------------------------------------------------------------------------------------------->
       <!--Bootstrap4 JS files -->
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-            
+              
   </body>
 </html>
