--- a/src/app/book-create/book-create.component.html
+++ b/src/app/book-create/book-create.component.html
@@ -43,7 +43,7 @@
       
   </head>
   <body>
-    <section class="full-destination">
+    <div class="full-destination">
     <nav class="navbar navbar-expand-md">
         <a class="navbar-brand"><img src="/assets/images/sheero.png" alt="sheero_logo" class="sheero"></a>
         <span class="navbar-text mx-auto">TripWithUs!</span>
@@ -188,7 +188,7 @@
                                    
                                 
                         <div class="form-group">
-                          <button type="submit" class="btn btn-success save-button" [disabled]="!bookForm.form.valid">Save</button>
+                          <button type="submit" class="btn btn-success" [disabled]="!bookForm.form.valid">Save</button>
                         </div>
                     </form>
                 
@@ -196,7 +196,7 @@
                     </div>
     
             </section>
-            </section>>
+            </div>
       <!------------------------------------------------------------------------------------------------------------------------->
       <!--Bootstrap4 JS files -->
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
