modifying add-form-container

--- a/src/app/book-create/book-create.component.css
+++ b/src/app/book-create/book-create.component.css
@@ -48,7 +48,7 @@ color: #fff !important;
   color: #555454;
   font-family: 'Lato', 'Arial', sans-serif;
   font-weight: 300;
-  font-size: 20px;                        /******** Base Line font-size **********/           
+  font-size: 1.5em;                        /******** Base Line font-size **********/           
   text-rendering: optimizeLegibility;
   overflow-x: hidden;
     
@@ -94,6 +94,9 @@ h2 {
   height: 100%;                          /****** 100% of viewport height ********/
   margin: 0 auto;
   background-color: #fff;
+  box-sizing: border-box;
+  border: 1px solid #555454;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   /*border-radius: 25%; */
 }
 
@@ -164,7 +167,7 @@ textarea {
   
 
 
-  .save-button {
+  #save-button {
       text-align: center;
       padding-bottom: 20%;
   }
