--- a/src/app/book-create/book-create.component.html
+++ b/src/app/book-create/book-create.component.html
@@ -1,34 +1,4 @@
-<!--<div class="container">
-    <h1>Add New Book</h1>
-    <div class="row">
-      <div class="col-md-6">
-        <form (ngSubmit)="saveBook()" #bookForm="ngForm">
-          <div class="form-group">
-            <label for="name">Destination Name</label>
-            <input type="text" class="form-control" [(ngModel)]="book.isbn" name="isbn" required>
-          </div>
-          <div class="form-group">
-            <label for="name">Destination Type</label>
-            <input type="text" class="form-control" [(ngModel)]="book.title" name="title" required>
-          </div>
-          <div class="form-group">
-            <label for="name">Destination Budget</label>
-            <input type="text" class="form-control" [(ngModel)]="book.author" name="author" required>
-          </div>
 
-           minlength="3" maxlength="20" required data-errormessage-value-missing="Uh oh, somethings wrong!" data-errormessage-type-mismatch="Uh oh, somethings wrong! enter activity 3-20 characters long"
-         
-          <div class="form-group">
-            <label for="name">Destination Image</label>
-            <input type="text" class="form-control" [(ngModel)]="book.publisher" name="publisher" required>
-          </div>
-          <div class="form-group">
-            <button type="submit" class="btn btn-success" [disabled]="!bookForm.form.valid">Save</button>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>-->
 
   <!DOCTYPE html>
 <html lang="en">
@@ -82,7 +52,7 @@
     <section class="add-destinations">
                 <div class="add-form-container">
                 <div class="row">
-                    <h2 style="color:#555454;">Add Destination</h2>
+                    <h2 class="destination-h2" style="color:#555454;">Add Destination</h2>
                 </div>
                 
                 
@@ -129,7 +99,7 @@
                            
                                 
                                 <div class="form-group">
-                                  <button type="submit" class="btn btn-success" id="save-button" [disabled]="!bookForm.form.valid">Save</button>
+                                  <button type="submit" class="btn btn-success" [disabled]="!bookForm.form.valid">Save</button>
                                 </div>
                                 
                     </form>
