--- a/src/app/book-create/book-create.component.css
+++ b/src/app/book-create/book-create.component.css
@@ -4,7 +4,7 @@
   height: 900px;
 }*/
 nav-link {
-  font-size: 1.1em;
+  font-size: 1.5em;
   font-family: 'Lato', 'sans-serif';
   cursor: pointer;
   margin-left: 25px;
@@ -70,7 +70,7 @@ input {
 
 input,
 input::-webkit-input-placeholder {
-  font-size: 20px;
+  font-size: 1.2em;
   line-height: 3;
 }
 
@@ -87,12 +87,12 @@ section {
 
 /********** Heading ***********/
 
-.destination-h2 h2 {
+h2.destination-h2 {
   font-weight: bold;
-  font-size: 180%;            /* expressed in %age of body font size: target/context = 36px/20px = 180% */
+  font-size: 2em;            /* expressed in %age of body font size: target/context = 36px/20px = 180% */
   word-spacing: 2%;
-  margin-bottom: 8%;
-  margin-left: 19.8958333333%;     /* 960px is row width (context) ,so Target/Context = 191px/960px = 19.8958333333% */
+  margin-bottom: 2%;
+  margin-left: 19.99999%;     /* 960px is row width (context) ,so Target/Context = 191px/960px = 19.8958333333% */
   padding-top: 2%;
   letter-spacing: 1%;
 }
@@ -100,8 +100,8 @@ section {
 
 /************* Add events Form ********************/
 .add-form-container {
-  width: 50%;                             /* Here context is section of width 90px, so target/context = 63px/90px = 70% */
-  height: 100%;                          /****** 100% of viewport height ********/
+  width: 70%;                             /* Here context is section of width 90px, so target/context = 63px/90px = 70% */
+  height: auto;                          /****** 100% of viewport height ********/
   margin: 0 auto;
   background-color: #fff;
   box-sizing: border-box;
@@ -113,7 +113,9 @@ section {
 label {
       display: block;
       color: #555454;
+      margin-bottom: 0.5em;
       font-weight: 400;
+      font-size: 1.4em;
   }
 
 .add-form {
@@ -186,12 +188,12 @@ textarea {
       margin: 0 auto;
   }
   
-  .destination-h2 h2 {
+  h2.destination-h2 {
   font-weight: 300;
   font-size: 180%;
   word-spacing: 2%;
   padding-bottom: 5%;
-  /*margin-left: 19.99999%;*/
+  margin-left: 19.99999%;
   width: auto;
   padding-top: 2%;
   letter-spacing: 1%;
