final update for desktop form

--- a/src/app/book-create/book-create.component.html
+++ b/src/app/book-create/book-create.component.html
@@ -95,12 +95,9 @@
                           
                         <!----------- Save button row ------------->
                        
-                                
-                           
-                                
-                                <div class="form-group">
-                                  <button type="submit" class="btn btn-success" [disabled]="!bookForm.form.valid">Save</button>
-                                </div>
+                          <div class="form-group">
+                            <button type="submit" style="width:100%;padding:2% 0;font-size: 1em;margin-top:2%;" class="btn btn-success" [disabled]="!bookForm.form.valid">Save</button>
+                          </div>
                                 
                     </form>
                 
