--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -74,7 +74,7 @@
               <td>{{ book.isbn }}</td>
               <td>{{ book.title }}</td>
               <td>{{ book.author }}</td>
-              <td><a [routerLink]="['/book-details', book._id]">Show Detail</a></td>
+              <td><a [routerLink]="['/book-details', book._id]">Delete</a></td>
             </tr>
           </tbody>
         </table>
