--- a/src/app/book-create/book-create.component.css
+++ b/src/app/book-create/book-create.component.css
@@ -174,9 +174,9 @@ textarea {
   
   h2.destination-h2 {
   font-weight: 300;
-  font-size: 180%;
+  font-size: 2em; 
   word-spacing: 2%;
-  padding-bottom: 5%;
+  padding-bottom: 10%;
   margin-left: 19.99999%;
   width: auto;
   padding-top: 2%;
