--- a/src/app/book-create/book-create.component.html
+++ b/src/app/book-create/book-create.component.html
@@ -108,7 +108,7 @@
         <!----------------------------------  Mobile Form ------------------------------------------- -->
             <div class="add-form-container-mobile">
                 <div class="row">
-                    <h2 style="color:#fff;">Add Destinations</h2>
+                    <h2 class="destination-h2" style="color:#fff;">Add Destinations</h2>
                 </div>
                 <!------- Customer name row --------->
                 <div class="row">
@@ -155,7 +155,7 @@
                                    
                                 
                         <div class="form-group">
-                          <button type="submit" style="width:100%;padding:2% 0;font-size: 1em;margin-top:2%;" class="btn btn-success" [disabled]="!bookForm.form.valid">Save</button>
+                          <button type="submit" style="width:100%;padding:3% 0;font-size: 1em;margin-top:2%;" class="btn btn-success" [disabled]="!bookForm.form.valid">Save</button>
                         </div>
                     </form>
                 
