--- a/src/app/book-create/book-create.component.css
+++ b/src/app/book-create/book-create.component.css
@@ -73,8 +73,8 @@ section {
 
 h2.destination-h2 {
   font-weight: bold;
-  font-size: 2em;            /* expressed in %age of body font size: target/context = 36px/20px = 180% */
-  word-spacing: 2%;
+  font-size: 2em;            /* expressed in %age of body font size: target/context = 3em/1.5em = 2em */
+  word-spacing: 2%;          
   margin-bottom: 2%;
   margin-left: 20%;   /* 960px is row width (context) ,so Target/Context = 192px/960px = 19.8958333333% */
   padding-top: 2%;
@@ -141,14 +141,6 @@ textarea {
   height: 20%;
 }
   
-
-/*
-  #save-button {
-      text-align: center;
-      padding-bottom: 20%;
-  } */
-
-
 .add-form-container-mobile {
   display: none;
 }
