--- a/src/app/book-create/book-create.component.css
+++ b/src/app/book-create/book-create.component.css
@@ -43,7 +43,7 @@ color: #fff !important;
   color: #555454;
   font-family: 'Lato', 'Arial', sans-serif;
   font-weight: 300;
-  font-size: 1.5em;                        /******** Base Line font-size **********/           
+  font-size: 1.5em;                        /******** Base Line font-size 1.5em **********/           
   text-rendering: optimizeLegibility;
   overflow-x: hidden;
     
@@ -61,35 +61,35 @@ color: #fff !important;
 /******** Reusable - Base components ***********/
 
 .row {
-  max-height: 1140px;                     /******** Base Line Height **********/
+  max-height: 1140px;                     /******** Base Line Height 1140px **********/
   margin: 0 auto 0 auto;
 }
 
 section {
-  padding: 90px 0;                        /********* Base line padding  ********/ 
+  padding: 90px 0;                        /********* Base line padding 90px ********/ 
 }
 
 /********** Heading ***********/
 
 h2.destination-h2 {
   font-weight: bold;
-  font-size: 2em;            /* expressed in %age of body font size: target/context = 3em/1.5em = 2em */
-  word-spacing: 2%;          
-  margin-bottom: 2%;
+  font-size: 2em;            
+  word-spacing: 2%;          /* expressed in %age of body font size: target/context = 3em/1.5em = 2% */                                    
+  margin-bottom: 2%;                                            /* target/context = 1.8px/90px = 2% */
   margin-left: 20%;   /* 960px is row width (context) ,so Target/Context = 192px/960px = 19.8958333333% */
-  padding-top: 2%;
+  padding-top: 2%;                                              /* target/context = 1.8px/90px = 2% */
   letter-spacing: 1%;
 }
 
 
 /************* Add events Form ********************/
 .add-form-container {
-  width: 50%;                             /* Here context is section of width 90px, so target/context = 63px/90px = 70% */
-  height: auto;                          /****** 100% of viewport height ********/
+  width: 50%;          /* Here context is section of width 900px, so target/context = 450px/900px = 50% */
+  height: auto;                          
   margin: 0 auto;
   background-color: #fff;
   box-sizing: border-box;
-  padding: 5% 0;
+  padding: 5% 0;       /* target/context = 4.5px/90px = 5% */
   border: 1px solid #555454;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -97,14 +97,14 @@ h2.destination-h2 {
 label {
       display: block;
       color: #555454;
-      margin-bottom: 1em;
+      margin-bottom: 1em;   
       font-weight: 400;
       font-size: 1.4em;
   }
 
 .add-form {
-  padding-top: 3%;
-  width: 60%;                            /* context is row of width 960px, target/context = 576px/960px = 60% */
+  padding-top: 3%;        /* target/context = 2.7px/90px = 3% */
+  width: 60%;            /* context is row of width 960px, target/context = 576px/960px = 60% */
   margin: 0 auto; 
 }
 
@@ -112,10 +112,10 @@ input[type=text],
 input[type=email],
 select,
 textarea {
-  width: 100%;
-  padding: 2%;
-  margin-bottom: 8%;
-  border-radius: 3%;
+  width: 100%;          /* width of form input = 100% to match with its context - .add-form-container*/ 
+  padding: 2%;         /* target/context = 1.8px/90px = 2% */
+  margin-bottom: 8%;    /* target/context = 7.2px/90px = 8% */
+  border-radius: 3%;    /* to make rounded corners */ 
   border: 1px solid #ccc;
 }
 
@@ -129,16 +129,16 @@ textarea {
 
 input[type=date],
 input[type=file]{
-  width: 100%;
-  padding: 2%;
-  margin-bottom: 8%;
-  border-radius: 3%;
+  width: 100%;    /* width of form input = 100% to match with its context - .add-form-container*/
+  padding: 2%;    /* target/context = 1.8px/90px = 2% */
+  margin-bottom: 8%; /* target/context = 7.2px/90px = 8% */
+  border-radius: 3%; /* to make rounded corners */
   border: 1px solid #ccc;
 }
   
   
 textarea {
-  height: 20%;
+  height: 20%;      
 }
   
 .add-form-container-mobile {
@@ -153,25 +153,25 @@ textarea {
 @media only screen and (max-width: 768px) {
   
   
-  section { padding: 10% 0;}
+  section { padding: 10% 0;}      /* padding top and bottom target/context = 9px/90px = 10% */
   
   .add-form-container { display: none;}
   
   .add-form-container-mobile {
-      padding-top: 10%;
+      padding-top: 10%;        /* target/context = 9px/90px = 10% */
       display: block;
-      width: 70%;
+      width: 70%;              /* Here context is section of width 90px, so target/context = 63px/90px = 70% */
       margin: 0 auto;
   }
   
   h2.destination-h2 {
   font-weight: 300;
   font-size: 2em; 
-  word-spacing: 2%;
-  padding-bottom: 10%;
-  margin-left: 18.8958333333%;
+  word-spacing: 2%;             /* expressed in %age of body font size: target/context = 3em/1.5em = 2% */ 
+  padding-bottom: 10%;          /* target/context = 9px/90px = 10% */
+  margin-left: 18.8958333333%; /* 768px is row width (context) ,so Target/Context = 145px/768px = 18.8958333333% */
   width: auto;
-  padding-top: 2%;
+  padding-top: 2%;             /* target/context = 1.8px/90px = 2% */
   letter-spacing: 1%;
   }
   
@@ -187,20 +187,20 @@ textarea {
   input[type=email],
   select,
   textarea {
-  width: 100%;
-  padding: 2%;
-  margin-bottom: 10%;
-  border-radius: 3%;
+  width: 100%;      /* width of form input = 100% to match with its context - add-form-container-mobile*/
+  padding: 2%;      /* target/context = 1.8px/90px = 2% */
+  margin-bottom: 10%; /* target/context = 9px/90px = 10% */
+  border-radius: 3%;  /* to make the borders rounded */
   border: 1px solid #ccc;
 }
 
   
 input[type=date],
 input[type=file] {
-  width: 100%;
-  padding: 2%;
-  margin-bottom: 10%;
-  border-radius: 3%;
+  width: 100%;   /* width of form input = 100% to match with its context - add-form-container-mobile*/
+  padding: 2%;   /* target/context = 1.8px/90px = 2% */
+  margin-bottom: 10%; /* target/context = 9px/90px = 10% */
+  border-radius: 3%; /* to make the borders rounded */
   border: 1px solid #ccc;
 }
   
@@ -210,19 +210,14 @@ textarea {
 }
 
 .add-form-mobile {
-  padding-top: 3%;
-  width: 100%;                            /* context is row of width 960px, target/context = 576px/960px = 60% */
+  padding-top: 3%; /* target/context = 2.7px/90px = 3% */
+  width: 100%;     /* width of form input = 100% to match with its context - add-form-container-mobile*/
   margin: 0 auto; 
 }
 
 
-  .submit-button {
-      text-align: center;
-      padding-bottom: 20%;
-  }
-
   nav .navbar-nav li {
-    padding-top: 2%;
+    padding-top: 2%; /* target/context = 1.8px/90px = 2% */
     }
   
 }
