--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -62,28 +62,28 @@
             <div class="card-deck mb-5">
             <div class="card" style="color: #555;">
                 <div class="card-body">
-                <img src="/assets/images/sudeepta.png" alt="Sudeepta picture" class="img-fluid"/>
+                <img src="/assets/images/sudeepta.jpg" alt="Sudeepta picture" class="img-fluid"/>
                 <h4 class="card-title mt-2">Sudeepta Das</h4>
                 <h6 class="card-subtitle">Chief Executive Officer</h6>
                 </div>
             </div>
             <div class="card" style="color: #555;">
                 <div class="card-body">
-                <img src="/assets/images/biswajeet.png" alt="Biswajeet picture" class="img-fluid"/>
+                <img src="/assets/images/biswajeet.jpg" alt="Biswajeet picture" class="img-fluid"/>
                 <h4 class="card-title mt-2">Biswajeet Mohapatra</h4>
                 <h6 class="card-subtitle">Chief Operations Officer</h6>
                 </div>
             </div>
             <div class="card" style="color: #555;">
                 <div class="card-body">
-                <img src="/assets/images/shivani.png" alt="Shivani picture" class="img-fluid"/>
+                <img src="/assets/images/shivani.jpg" alt="Shivani picture" class="img-fluid"/>
                 <h4 class="card-title mt-2">Shivani Sharma</h4>
                 <h6 class="card-subtitle">Chief Information Officer</h6>
                 </div>
             </div>
             <div class="card" style="color: #555;">
                 <div class="card-body">
-                <img src="/assets/images/aditya.png" alt="aditya picture" class="img-fluid"/>
+                <img src="/assets/images/aditya.jpg" alt="aditya picture" class="img-fluid"/>
                 <h4 class="card-title mt-2">Aditya Wagholikar</h4>
                 <h6 class="card-subtitle">Chief Financial Officer</h6>
                 </div>
