--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -50,7 +50,7 @@
     <section>
         <div class="headline">
         <h1>Boston</h1>
-        <h3>City in Massachusetts</h3>
+        
          <p>
             Boston's four centuries of history are exhibited by the city's must-see sights. Boston isn't just a center point for baseball, scholarly universities, and brownstones. It's additionally home to America's first extensive free municipal open library, the primary subway framework, the principal state-funded school, and the open park. To state the city is historic would be underscoring it, however, this mischievous brilliant school town doesn't linger in the historic remains, either.
             </p>
@@ -63,29 +63,29 @@
             <div class="card" style="color: #555;">
                 <div class="card-body">
                 <img src="/assets/images/sudeepta.jpg" alt="Sudeepta picture" class="img-fluid"/>
-                <h4 class="card-title mt-2">Sudeepta Das</h4>
-                <h6 class="card-subtitle">Chief Executive Officer</h6>
+                <h3> class="card-title mt-2">Sudeepta Das</h3>
+                <h5> class="card-subtitle">Chief Executive Officer</h5>
                 </div>
             </div>
             <div class="card" style="color: #555;">
                 <div class="card-body">
                 <img src="/assets/images/biswajeet.jpg" alt="Biswajeet picture" class="img-fluid"/>
-                <h4 class="card-title mt-2">Biswajeet Mohapatra</h4>
-                <h6 class="card-subtitle">Chief Operations Officer</h6>
+                <h3> class="card-title mt-2">Biswajeet Mohapatra</h3>
+                <h5> class="card-subtitle">Chief Operations Officer</h5>
                 </div>
             </div>
             <div class="card" style="color: #555;">
                 <div class="card-body">
                 <img src="/assets/images/shivani.jpg" alt="Shivani picture" class="img-fluid"/>
-                <h4 class="card-title mt-2">Shivani Sharma</h4>
-                <h6 class="card-subtitle">Chief Information Officer</h6>
+                <h3> class="card-title mt-2">Shivani Sharma</h3>
+                <h5> class="card-subtitle">Chief Information Officer</h5>
                 </div>
             </div>
             <div class="card" style="color: #555;">
                 <div class="card-body">
                 <img src="/assets/images/aditya.jpg" alt="aditya picture" class="img-fluid"/>
-                <h4 class="card-title mt-2">Aditya Wagholikar</h4>
-                <h6 class="card-subtitle">Chief Financial Officer</h6>
+                <h3> class="card-title mt-2">Aditya Wagholikar</h3>
+                <h5> class="card-subtitle">Chief Financial Officer</h5>
                 </div>
             </div>
             </div>
