--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -49,10 +49,14 @@
 
     <section>
         <div class="headline">
-        <h1>Boston</h1>
+        <h1>About Us</h1>
         
          <p>
-            Boston's four centuries of history are exhibited by the city's must-see sights. Boston isn't just a center point for baseball, scholarly universities, and brownstones. It's additionally home to America's first extensive free municipal open library, the primary subway framework, the principal state-funded school, and the open park. To state the city is historic would be underscoring it, however, this mischievous brilliant school town doesn't linger in the historic remains, either.
+            Nurtured from the seed of a single great idea - to empower the traveller - TripWithUs! is a pioneer in the US online travel industry. Founded in the year 2010 by Sudeepta Das, TripWithUs! came to life to empower the millenial traveller with instant bookings and comprehensive choices. The company initiated its journey serving the Austin market, offering a range of best-value products and services powered by technology and round-the-clock customer support.<br><br>
+
+            After emboldening its position in the market as a brand recognised for its reliability and transparency, TripWithUs! launched its pan US operations in 2015. With more and more Americans initiating to transact online and new opportunities with the advent of low cost carriers, TripWithUs! offered travellers the convenience of booking travel online with a few clicks.<br><br>
+
+            TripWithUs's rise has been led by the vision of its executive leadership team and the spirit of each one of its  employees, for whom no idea is too big and no problem too difficult. With untiring determination, TripWithUs! has proactively diversified its product offerings, adding a variety of online and offline services. TripWithUs! has stayed ahead of the curve by continually evolving its technology to meet the ever-changing demands of the rapidly developing global travel market, steadily establishing itself as the United States' leading online travel company.
             </p>
         </div>
         
@@ -63,29 +67,29 @@
             <div class="card" style="color: #555;">
                 <div class="card-body">
                 <img src="/assets/images/sudeepta.jpg" alt="Sudeepta picture" class="img-fluid"/>
-                <h3> class="card-title mt-2">Sudeepta Das</h3>
-                <h5> class="card-subtitle">Chief Executive Officer</h5>
+                <h3 class="card-title mt-2">Sudeepta Das</h3>
+                <h5 class="card-subtitle">Chief Executive Officer</h5>
                 </div>
             </div>
             <div class="card" style="color: #555;">
                 <div class="card-body">
                 <img src="/assets/images/biswajeet.jpg" alt="Biswajeet picture" class="img-fluid"/>
-                <h3> class="card-title mt-2">Biswajeet Mohapatra</h3>
-                <h5> class="card-subtitle">Chief Operations Officer</h5>
+                <h3 class="card-title mt-2">Biswajeet Mohapatra</h3>
+                <h5 class="card-subtitle">Chief Operations Officer</h5>
                 </div>
             </div>
             <div class="card" style="color: #555;">
                 <div class="card-body">
                 <img src="/assets/images/shivani.jpg" alt="Shivani picture" class="img-fluid"/>
-                <h3> class="card-title mt-2">Shivani Sharma</h3>
-                <h5> class="card-subtitle">Chief Information Officer</h5>
+                <h3 class="card-title mt-2">Shivani Sharma</h3>
+                <h5 class="card-subtitle">Chief Information Officer</h5>
                 </div>
             </div>
             <div class="card" style="color: #555;">
                 <div class="card-body">
                 <img src="/assets/images/aditya.jpg" alt="aditya picture" class="img-fluid"/>
-                <h3> class="card-title mt-2">Aditya Wagholikar</h3>
-                <h5> class="card-subtitle">Chief Financial Officer</h5>
+                <h3 class="card-title mt-2">Aditya Wagholikar</h3>
+                <h5 class="card-subtitle">Chief Financial Officer</h5>
                 </div>
             </div>
             </div>
