changed section to container div

--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <!--Navigation-->
-    <nav class="navbar navbar-expand-md fixed-top">
+    <nav class="navbar navbar-expand-md">
         <a class="navbar-brand"><img src="/assets/images/sheero.png" alt="sheero_logo" class="sheero"></a>
         <span class="navbar-text mx-auto">TripWithUs!</span>
         
@@ -47,7 +47,7 @@
         </div>
     </nav>
 
-    <section>
+    <div class="container">
         <div class="headline">
         <h1>About Us</h1>
         
@@ -94,7 +94,7 @@
             </div>
             </div>
         </div>
-        </section>    
+       </div>
 <!--Bootstrap4 JS files -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
