comments added final

--- a/src/app/aboutus/aboutus.component.css
+++ b/src/app/aboutus/aboutus.component.css
@@ -29,20 +29,14 @@
     text-align: center;
   }
   
- 
+ /** Basic body setup **/
 
 body {
   background-image: url("/assets/images/aboutus.jpg");
   background-size: cover;
   background-position: center;
   text-rendering: optimizeLegibility;
-  overflow-x: hidden;
-}
-
-.map {
-  overflow: hidden;
-  box-shadow: 5px 10px 25px #555;
-  margin-top: 8%;
+  overflow-x: hidden;                  /* to avoid horizontal scroll bar */
 }
 
 .headline h1 {
@@ -50,23 +44,11 @@ body {
   font-size: 3.5em;
 }
 
-
-
 .headline p {
-  padding: 2.5% 0;
+  padding: 2.5% 0;                     
   font-size: 1.5em;
 }
 
 .square-grid h3{
   color: #555;
-}
-
-/****************** Media Queries ******************************/
-
-@media only screen and (max-width: 768px) {
-
-section {
-  margin-top: 15%;
-}
-
 }
