--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -5,15 +5,19 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
+  <!--Icons CSS-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  
+  <!--Google fonts CSS: Lato, Sans-serif -->
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400" rel="stylesheet">
   
+  <!--Bootstrap CSS file-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
  
 </head>
 <body>
-    <!--Navigation-->
+    <!--Navigation section-->
     <nav class="navbar navbar-expand-md">
         <a class="navbar-brand"><img src="/assets/images/sheero.png" alt="sheero_logo" class="sheero"></a>
         <span class="navbar-text mx-auto">TripWithUs!</span>
@@ -46,6 +50,7 @@
         </ul>
         </div>
     </nav>
+    <!-- page Content starts here -->
 
     <div class="container">
         <div class="headline">
@@ -60,7 +65,7 @@
             </p>
         </div>
         
-        
+        <!--- team introduction content -->
         <div class="container square-grid">
             
             <div class="card-deck mb-5">
@@ -95,6 +100,7 @@
             </div>
         </div>
        </div>
+
 <!--Bootstrap4 JS files -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
